--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,11 @@
 {
   "buildCommand": null,
   "outputDirectory": "public",
-  "installCommand": null
+  "installCommand": null,
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "/$1"
+    }
+  ]
 }
