--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
     },
     "dependencies": {
         "connect-mongo": "^5.0.0",
+        "cookie-parser": "^1.4.7",
         "cors": "^2.8.5",
         "dotenv": "^16.6.1",
         "express": "^4.18.2",
         "express-session": "^1.17.3",
+        "jsonwebtoken": "^9.0.2",
         "mongoose": "^7.5.0",
         "passport": "^0.6.0",
         "passport-google-oauth20": "^2.0.0",
