--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,21 @@
 {
-  "version": 2,
-  "builds": [
-    {
-      "src": "server.js",
-      "use": "@vercel/node"
+  "functions": {
+    "server.js": {
+      "maxDuration": 30
     }
-  ],
+  },
   "routes": [
+    {
+      "src": "/css/(.*)",
+      "dest": "/css/$1"
+    },
+    {
+      "src": "/(.*\\.(css|js|png|jpg|jpeg|gif|svg|ico))",
+      "headers": {
+        "cache-control": "s-maxage=31536000"
+      },
+      "dest": "/$1"
+    },
     {
       "src": "/(.*)",
       "dest": "/server.js"
