--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
     "dependencies": {
       "express": "^4.18.2",
       "mongoose": "^8.0.0",
-      "dotenv": "^16.3.1"
+      "dotenv": "^16.3.1",
+      "passport": "^0.6.0",
+      "passport-google-oauth20": "^2.0.0",
+      "jsonwebtoken": "^9.0.0",
+      "cookie-parser": "^1.4.6"
     },
     "devDependencies": {
       "nodemon": "^3.0.1"
